# src

./: .gitignore  .travis.yml  .zenodo.json  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Gemc.cc  LICENSE  LICENSE.md  NOTICE  README  README.md  SConstruct  SECURITY.md  action.yml  annotated.html  annotated_dup.js  changeLog  ci.sh  classGSensitiveDetector.html  classGSensitiveDetector.js  classGSensitiveDetector__coll__graph.map  classGSensitiveDetector__inherit__graph.md5  classGSession.html  classGSession.js  classGSession__coll__graph.map  classGSession__inherit__graph.md5  classGStateMessage.html  classGStateMessage.js  classGStateMessage__coll__graph.map  classGStateMessage__coll__graph.md5  classGStateMessage__inherit__graph.map  classGStateMessage__inherit__graph.md5  classes.html  conventions.h  core.ini  debug.ini  (+56 more)
actions/: gaction.cc  gaction.h  gactionConventions.h  gactionsDoxy.h  meson.build
api/: README.md  g4_colors.py  g4_units.py  gcolors.py  gconfiguration.py  gemc_sqlite.py  geometry.py  geometry_api.py  gmaterial.py  gsqlite.py  gutils.py  gvolume.py  materials_api.py  meson.build  mirrors_api.py  pyvista_api.py  run_geometry.py  scigTemplate.py  scig_sql.py  solid_html.py  solids_map.py  system_template.py  templates.py  utils.py  utils_api.py
dbselect/: dbqt_resources.qrc  dbselect.cc  dbselect.h  dbselectDoxy.h  dbselectOptions.cc  dbselectOptions.h  dbselectView.cc  dbselectView.h  dbselect_options.cc  dbselect_options.h  meson.build  qt_resources.qrc
dependencies/: meson.build
eventDispenser/: SConscript  SConstruct  eventDispenser.cc  eventDispenser.h  eventDispenserConventions.h  eventDispenserDoxy.h  eventDispenserOptions.cc  eventDispenserOptions.h  eventDispenser_options.cc  eventDispenser_options.h  meson.build  settings.xcconfig
examples/: calorimeter.jcard  configuration.jcard  dosimeter.jcard  ex1_1.jcard  ex1_2.jcard  ex6_1.jcard  meson.build  simple_flux.jcard  target.jcard
g4dialog/: g4dialog.cc  g4dialog.h  g4dialogDoxy.h  g4dialogOptions.cc  g4dialogOptions.h  g4dialog_options.cc  g4dialog_options.h  gui_session.cc  gui_session.h  meson.build
g4display/: SConscript  SConstruct  g4SceneProperties.cc  g4SceneProperties.h  g4Text.cc  g4Text.h  g4controls.cc  g4controls.h  g4display.cc  g4display.h  g4displayConventions.h  g4displayDoxy.h  g4displayOptions.cc  g4displayOptions.h  g4display_options.cc  g4display_options.h  meson.build  notes  qt_resources.qrc  settings.xcconfig  todo
g4system/: SConscript  SConstruct  g4materials.cc  g4systemConventions.h  g4systemDoxy.h  g4systemOptions.cc  g4systemOptions.h  g4system_options.cc  g4system_options.h  g4volume.cc  g4volume.h  g4world.cc  g4world.h  meson.build  settings.xcconfig  todo
gQtButtonsWidget/: README.md  SConscript  SConstruct  gQtButtonsWidget.cc  gQtButtonsWidget.h  gQtButtonsWidgetDoxy.h  gQtButtonsWidgetOptions.cc  gQtButtonsWidgetOptions.h  meson.build  settings.xcconfig
gbase/: gbase.h  gbaseDoxy.h  meson.build
gboard/: gboard.cc  gboard.h  gboardDoxy.h  gui_session.cc  gui_session.h  meson.build
gdata/: SConscript  SConstruct  gDataCollection.h  gDigitizedData.cc  gDigitizedData.h  gTrueInfoData.cc  gTrueInfoData.h  gdataConventions.h  gdataDoxy.h  gdata_options.cc  gdata_options.h  meson.build  notes  settings.xcconfig  todo
gdetector/: SConscript  gdetectorConstruction.cc  gdetectorConstruction.h  gdetectorDoxy.h  gdetector_options.cc  gdetector_options.h  meson.build
gdynamicDigitization/: SConscript  SConstruct  createSystemRoutine.py  gDosimeterDigitization.cc  gDosimeterDigitization.h  gFluxDigitization.cc  gFluxDigitization.h  gParticleCounterDigitization.cc  gParticleCounterDigitization.h  gPhotonDetectorDigitization.h  gdynamicdigitization.cc  gdynamicdigitization.h  gdynamicdigitizationConventions.h  gdynamicdigitizationDoxy.h  gdynamicdigitization_options.cc  gdynamicdigitization_options.h  ginternalDigitization.h  greadoutSpecs.h  meson.build  todo
gfactory/: SConstruct  gdl.h  gfactory.h  gfactoryDoxy.h  gfactory_options.cc  gfactory_options.h  meson.build  notes  todo
gfields/: Doxyfile  README.md  SConscript  SConstruct  gfield.cc  gfield.h  gfieldConventions.h  gfieldDoxy.h  gfieldOptions.cc  gfieldOptions.h  gfield_options.cc  gfield_options.h  gmagneto.cc  gmagneto.h  meson.build  settings.xcconfig  todo
ghit/: SConscript  SConstruct  addHitInfos.cc  calculations.cc  ghit.cc  ghit.h  ghitConventions.h  ghitDoxy.h  meson.build  settings.xcconfig  todo
goptions/: README.md  SConscript  SConstruct  goption.cc  goption.h  goptions.cc  goptions.h  goptionsConventions.h  goptionsDoxy.h  gswitch.h  json.hpp  meson.build  settings.xcconfig  todo  version.py
gparticle/: README.md  SConscript  SConstruct  gparticle.cc  gparticle.h  gparticleConventions.h  gparticleDoxy.h  gparticleOptions.cc  gparticleOptions.h  gparticle_options.cc  gparticle_options.h  gparticle_reader.cc  gparticle_reader.h  meson.build  settings.xcconfig  todo
gphysics/: README.md  SConscript  SConstruct  gphysics.cc  gphysics.h  gphysicsConventions.h  gphysicsDoxy.h  gphysicsOptions.cc  gphysicsOptions.h  gphysics_options.cc  gphysics_options.h  meson.build  settings.xcconfig
gqtbuttonswidget/: gQtButtonsWidget.cc  gQtButtonsWidget.h  gQtButtonsWidgetDoxy.h  gQtButtonsWidget_options.cc  gQtButtonsWidget_options.h  meson.build
gsd/: SConscript  decisionToSkipHit.cc  gsd.cc  gsd.h  gsdDoxy.h  meson.build
gsession/: SConscript  gStateMessage.cc  gStateMessage.h  gsession.cc  gsession.h  meson.build
gsplash/: SConscript  SConstruct  gsplash.cc  gsplash.h  gsplashDoxy.h  meson.build  settings.xcconfig  todo
gstreamer/: SConscript  SConscriptJLABSRODLL  SConscriptROOTDLL  SConscriptTEXTDLL  SConstruct  gstreamer.cc  gstreamer.h  gstreamerConventions.h  gstreamerDoxy.h  gstreamerOptions.cc  gstreamerOptions.h  gstreamer_options.cc  gstreamer_options.h  meson.build  notes  settings.xcconfig  settingsROOT.xcconfig  todo
gsystem/: SConscript  SConstruct  gmaterial.cc  gmaterial.h  gmodifier.h  gsystem.cc  gsystem.h  todo  (+12 more)
(+932 files in other folders)
